# Maxgrow-AWS

./: .env  Dockerfile  README.md  app.py  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt
outputs/: Crew 1_Tarefa1.md  Crew 1_Tarefa2.md  Crew 1_Tarefa3.md  Crew 1_Tarefa4.md  Crew 1_Tarefa5.md  Crew.md  Crew2.md  Crew2_1_Captação de Recursos para Inovação_ DefiniçãoRecursosParceiros.md  Crew2_1_Captação de Recursos para Inovação_ ReuniãoAlinhamentoComEmpresa.md  Crew2_1_Captação de Recursos para Inovação_AnáliseCoerênciaComProjeto.md  Crew2_1_Captação de Recursos para Inovação_EstruturaçãoDoProjeto.md  Crew2_1_Captação de Recursos para Inovação_MonitoramentoIdentificaçãoOportunidades.md  Crew2_2_Realização da Proposta Inovação_OrganizaçãoDocumentosExigidos.md  Crew2_2_Realização da Proposta Inovação_PesquisaReferencialTeóricoDadosComplementares.md  Crew2_2_Realização da Proposta Inovação_RedaçãoDoProjeto.md  Crew2_2_Realização da Proposta Inovação_RevisãoTécnicaAdequação.md  Crew2_3_Realização da Proposta Inovação_DesenvolvimentoProposta.md  Crew2_3_Realização da Proposta Inovação_PesquisaProblemaEmpresa.md  Crew2_3_Realização da Proposta Inovação_PesquisaSoluçãoEmpresa.md  Crew2_Tarefa6.md  Crew4_3_Blog_DesenvolvimentoBlog.md  Crew5_Roteiro_Reels_ElaboraçãoRoteiroReels.md  Crew5_Roteiro_Reels_PesquisaConteúdo.md  Crew5_Roteiro_Reels_PreparaçãoBriefingProducaoReels.md  Crew_4_1_Marketing Digital_AnáliseAlinhamentoRelevância.md  Crew_4_1_Marketing Digital_ConstruçãoBriefingProfissional .md  Crew_4_1_Marketing Digital_RelatórioInsights.md  (+10 more)
(+17 files in other folders)
