[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sofia Petersen <sppessil@inf.ufpel.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
flask = "^3.1.0"
flask-cors = "^5.0.0"
flask-mysqldb = "^2.0.0"
bcrypt = "^4.2.1"
markdown2 = "^2.5.2"
fpdf = "^1.7.2"
pathlib = "^1.0.1"
pdfkit = "^1.0.0"
jinja2 = "^3.1.5"
werkzeug = "^3.1.3"
blinker = "^1.9.0"
click = "^8.1.8"
colorama = "^0.4.6"
itsdangerous = "^2.2.0"
mysqlclient = "^2.2.6"
tiktoken = "^0.7.0"
embedchain = "^0.1.122"
wkhtmltopdf = "^0.2"
litellm = "^1.55.9"
crewai = "^0.86.0"
crewai-tools = "^0.17.0"
langchain = "^0.3.13"
langchain-core = "^0.3.28"
langchain-ollama = "^0.2.2"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"
youtube-transcript-api = "^0.6.3"
gtts = "^2.5.4"
moviepy = "1.0.3"
imageio = {extras = ["pyav"], version = "^2.36.1"}
av = "^14.0.1"
openai = "^1.59.3"
speechrecognition = "^3.13.0"
pydub = "^0.25.1"
pypdf2 = "^3.0.1"
pytube3 = "^9.6.4"
yt-dlp = "^2024.12.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
